<resources>
    <string name="app_name">TLU schedule</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">All</string>
    <string name="tab_text_3">More</string>
    <string name="tab_text">Course Nav</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username contains only digits</string>
    <string name="invalid_password">Password must be not empty!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_go_to_login">Go to login\n</string>
    <string name="btn_login_back">Back</string>
    <string name="no_courses_available">No courses available.</string>
    <string name="loading">Loading…</string>
    <string name="channel_name">alarm_chanel</string>
    <string name="channel_description">Channel for course notification</string>
    <string name="prompt_username">Username</string>

    <string name="eg_item_date">Thứ 7, ngày 24 tháng 2 năm 2024</string>
    <string name="eg_item_start_time">07:00</string>
    <string name="eg_item_name">Tư tưởng Hồ Chí Minh</string>
    <string name="eg_item_room">233–A3   –   [ Tiết: 1 - 2 ]</string>
    <string name="eg_item_end_time">08:45</string>
    <string name="action_switch_night_mode">Switch night mode</string>
    <string name="helper_fragment_text">Chọn chức năng:</string>
    <string name="helper_fragment_button_login">Tải lịch</string>
    <string name="helper_fragment_button_help">Liên hệ và báo lỗi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses_file_name">courses.json</string>
    <string name="current_semester_file_name">current_semester.json</string>
    <string name="remember_me">Save me</string>
    <string name="tlu_function_button">Button to start an activity for TLU\'s function</string>
    <string name="title_activity_lich_thi">Lịch thi</string>
    <string name="title_activity_drl">Điểm rèn luyện</string>

</resources>