<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/item_ui_mod"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_margin="4sp">

    <TextView
        android:id="@+id/course_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingHorizontal="20dp"
        android:textColor="@color/text_ui_mod"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/eg_item_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:textColor="@color/text_ui_mod"
        android:textSize="34sp"
        android:text="@string/eg_item_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_day" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingHorizontal="10dp"
        android:textColor="@color/text_ui_mod"
        android:textSize="16sp"
        android:text="@string/eg_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_time"
        app:layout_constraintTop_toTopOf="@+id/course_time"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/course_room"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingHorizontal="10dp"
        android:textColor="@color/text_ui_mod"
        android:textSize="16sp"
        android:text="@string/eg_item_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_time"
        app:layout_constraintTop_toBottomOf="@+id/course_day" />

    <TextView
        android:id="@+id/course_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:textColor="@color/text_ui_mod"
        android:translationY="-15dp"
        android:text="@string/eg_item_end_time"
        app:layout_constraintStart_toStartOf="@+id/course_time"
        app:layout_constraintEnd_toEndOf="@+id/course_time"
        app:layout_constraintTop_toBottomOf="@id/course_time" />

</androidx.constraintlayout.widget.ConstraintLayout>